# axum-server-dual-protocol

./: .prettierrc.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml
.cargo/: config.toml
.config/: topic.dic
.github/workflows/: audit.yml  documentation.yaml  documentation.yml  format.yml  lint.yaml  lint.yml  publish.yml  spellcheck.yml  test.yaml  test.yml
examples/: hello-world.rs  hello_world.rs
minimal-versions/: Cargo.toml
src/: dual_acceptor.rs  dual_protocol.rs  dual_protocol_acceptor.rs  either.rs  lib.rs  upgrade_http.rs
tests/: dual_protocol.rs  dual_server.rs  upgrade_http.rs  uprade_http.rs  util.rs
