[package]
edition = "2021"
name = "minimal-versions"
publish = false
version = "0.0.0"

[dependencies]
axum-server-dual-protocol = { path = ".." }
# `tower` v0.4.0 incorrectly only requires `tower-layer` v0.3.1
tower-layer = "0.3.1"

[patch.crates-io]
axum-server = { git = "https://github.com/daxpedda/axum-server", branch = "fix-build" }
